установка пакетов eslint

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "homepage": "https://github.com/arturican/30DaysJavaScript#readme",
   "devDependencies": {
     "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
